logs/node.ext.python.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/node'...
Listing './lib/python3.5/site-packages/node/behaviors'...
Listing './lib/python3.5/site-packages/node/ext'...
Listing './lib/python3.5/site-packages/node/ext/directory'...
Listing './lib/python3.5/site-packages/node/ext/python'...
Compiling './lib/python3.5/site-packages/node/ext/python/goparser.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (goparser.py, line 71)
Compiling './lib/python3.5/site-packages/node/ext/python/nodes.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/nodes.py", line 144
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/node/ext/python/parser.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/parser.py", line 115
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/node/ext/python/renderer.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/renderer.py", line 99
    raise Incomplete, u"Incomplete protected section definition."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/node/ext/python/testing'...
Listing './lib/python3.5/site-packages/node/ext/python/testing/data'...
Compiling './lib/python3.5/site-packages/node/ext/python/testing/data/changed.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/testing/data/changed.py", line 12
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/node/ext/python/testing/data/moved.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/testing/data/moved.py", line 4
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/node/ext/python/testing/data/nullbyte.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/node/ext/python/testing/data/parseme.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/testing/data/parseme.py", line 24
    print 'do something'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/node/ext/python/testing/data/unchanged.py'...
***   File "./lib/python3.5/site-packages/node/ext/python/testing/data/unchanged.py", line 12
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/node/testing'...
Listing './lib/python3.5/site-packages/node/tests'...
Listing './lib/python3.5/site-packages/node-0.9.22.egg-info'...
Listing './lib/python3.5/site-packages/node.ext.directory-0.7.egg-info'...
Listing './lib/python3.5/site-packages/node.ext.python-0.1.egg-info'...
Listing './lib/python3.5/site-packages/odict'...
Listing './lib/python3.5/site-packages/odict-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumber'...
Listing './lib/python3.5/site-packages/plumber/tests'...
Listing './lib/python3.5/site-packages/plumber-1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/deprecation'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/lifecycleevent'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.deprecation-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.lifecycleevent-4.2.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
